# Beeftext

./: .gitignore  .gitmodules  AboutDialog.cpp  AboutDialog.h  AboutDialog.ui  AboutFrame.cpp  AboutFrame.h  AboutFrame.ui  BackupManager.cpp  BackupManager.h  Beeftext.qrc  Beeftext.rc  Beeftext.sln  Beeftext.vcxproj  Beeftext.vcxproj.filters  BeeftextConstants.cpp  BeeftextConstants.h  BeeftextGlobals.cpp  BeeftextGlobals.h  BeeftextSolution.pro  BeeftextUtils.cpp  BeeftextUtils.h  CMakeLists.txt  ClipboardManager.cpp  ClipboardManager.h  Combo.cpp  Combo.h  ComboManager.cpp  ComboManager.h  ComboUtils.cpp  ComboUtils.h  Constants.cpp  Doxyfile  I18nManager.cpp  I18nManager.h  InputManager.cpp  InputManager.h  LICENSE  LatestVersionInfo.cpp  LatestVersionInfo.h  (+29 more)
.github/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  issue_template.md
Beeftext/: AboutDialog.cpp  AboutDialog.h  AboutDialog.ui  AutoStart.cpp  AutoStart.h  Beeftext.pri  Beeftext.pro  Beeftext.qrc  Beeftext.rc  Beeftext.vcxproj  Beeftext.vcxproj.filters  BeeftextConstants.cpp  BeeftextConstants.h  BeeftextGlobals.cpp  BeeftextGlobals.h  BeeftextUtils.cpp  BeeftextUtils.h  CMakeLists.txt  ClipboardManager.cpp  ClipboardManager.h  Doxyfile  EmojiManager.cpp  EmojiManager.h  I18nManager.cpp  I18nManager.h  InputManager.cpp  InputManager.h  KeyboardMapper.cpp  KeyboardMapper.h  LatestVersionInfo.cpp  LatestVersionInfo.h  MainWindow.cpp  MainWindow.h  MainWindow.ui  MimeDataUtils.cpp  MimeDataUtils.h  PreferencesDialog.cpp  PreferencesDialog.h  PreferencesDialog.ui  PreferencesManager.cpp  (+24 more)
Beeftext/Backup/: BackupManager.cpp  BackupManager.h  BackupRestoreDialog.cpp  BackupRestoreDialog.h  BackupRestoreDialog.ui
Beeftext/Clipboard/: ClipboardManager.cpp  ClipboardManager.h  ClipboardManagerDefault.cpp  ClipboardManagerDefault.h  ClipboardManagerLegacy.cpp  ClipboardManagerLegacy.h
Beeftext/Combo/: CaseSensitivity.cpp  CaseSensitivity.h  Combo.cpp  Combo.h  ComboDialog.cpp  ComboDialog.h  ComboDialog.ui  ComboEditor.cpp  ComboEditor.h  ComboEditor.ui  ComboFrame.cpp  ComboFrame.h  ComboFrame.ui  ComboImportDialog.cpp  ComboImportDialog.h  ComboImportDialog.ui  ComboKeywordValidator.cpp  ComboKeywordValidator.h  ComboList.cpp  ComboList.h  ComboManager.cpp  ComboManager.h  ComboPickerModel.cpp  ComboPickerSortFilterProxyModel.cpp  ComboPickerWindow.cpp  ComboPickerWindow.h  ComboPickerWindow.ui  ComboSortFilterProxyModel.cpp  ComboSortFilterProxyModel.h  ComboTableWidget.cpp  ComboTableWidget.h  ComboTableWidget.ui  ComboTrigger.cpp  ComboTrigger.h  ComboVariable.cpp  ComboVariable.h  LastUseFile.cpp  LastUseFile.h  MatchingMode.cpp  MatchingMode.h  (+2 more)
Beeftext/Combo/ComboPicker/: ComboPickerItemDelegate.cpp  ComboPickerItemDelegate.h  ComboPickerModel.cpp  ComboPickerModel.h  ComboPickerSortFilterProxyModel.cpp  ComboPickerSortFilterProxyModel.h  ComboPickerWindow.cpp  ComboPickerWindow.h  ComboPickerWindow.ui  ComboPickerWindowMoverResizer.cpp  ComboPickerWindowMoverResizer.h  ComboPickerWindowResizer.cpp  ComboPickerWindowResizer.h
Beeftext/Dialogs/: AboutDialog.cpp  AboutDialog.h  AboutDialog.ui  ShortcutDialog.cpp  ShortcutDialog.h  ShortcutDialog.ui  VariableInputDialog.cpp  VariableInputDialog.h
Beeftext/Emoji/: Emoji.cpp  Emoji.h  EmojiList.cpp  EmojiList.h  EmojiManager.cpp  EmojiManager.h  value.cpp  value.h
Beeftext/Group/: Group.cpp  Group.h  GroupComboBox.cpp  GroupComboBox.h  GroupDialog.cpp  GroupDialog.h  GroupDialog.ui  GroupList.cpp  GroupList.h  GroupListWidget.cpp  GroupListWidget.h  GroupListWidget.ui
Beeftext/LastUse/: ComboLastUseFile.cpp  ComboLastUseFile.h  EmojiLastUseFile.cpp  EmojiLastUseFile.h
Beeftext/Picker/: PickerItemDelegate.cpp  PickerItemDelegate.h  PickerModel.cpp  PickerModel.h  PickerSortFilterProxyModel.cpp  PickerSortFilterProxyModel.h  PickerWindow.cpp  PickerWindow.h  PickerWindow.ui  PickerWindowMoverResizer.cpp  PickerWindowMoverResizer.h
Beeftext/Preferences/: PreferencesDialog.cpp  PreferencesDialog.h  PreferencesDialog.ui  PreferencesManager.cpp  PreferencesManager.h
Beeftext/Preferences/Panes/: PrefPane.h  PrefPaneAdvanced.cpp  PrefPaneAdvanced.h  PrefPaneAdvanced.ui  PrefPaneAppearance.cpp  PrefPaneAppearance.h  PrefPaneAppearance.ui  PrefPaneBehavior.cpp  PrefPaneBehavior.h  PrefPaneBehavior.ui  PrefPaneCombos.cpp  PrefPaneCombos.h  PrefPaneCombos.ui  PrefPaneEmojis.cpp  PrefPaneEmojis.h  PrefPaneEmojis.ui  PrefsPane.h  PrefsPaneAdvanced.cpp  PrefsPaneAdvanced.h  PrefsPaneAdvanced.ui  PrefsPaneAppearance.cpp  PrefsPaneAppearance.h  PrefsPaneAppearance.ui  PrefsPaneBehavior.cpp  PrefsPaneBehavior.h  PrefsPaneBehavior.ui  PrefsPaneCombos.cpp  PrefsPaneCombos.h  PrefsPaneCombos.ui  PrefsPaneEmojis.cpp  PrefsPaneEmojis.h  PrefsPaneEmojis.ui
Beeftext/Resources/: StyleCommon.qss  StyleDark.qss  StyleLight.qss  StyleNoCustom.qss  style.qss
Beeftext/Resources/Powershell/: Beeftext.ps1
Beeftext/Resources/Sources/: Arrow.psd  ArrowDown.psd  InstallerTopImage.psd  SocialBanner.afphoto  buttonAlignCenter.psd  buttonAlignJustify.psd  buttonAlignLeft.psd  buttonAlignRight.psd  buttonBold.psd  buttonItalic.psd  buttonLink.psd  buttonStrikeout.psd  buttonSubscript.psd  buttonSuperscript.psd  buttonUnderline.psd
Beeftext/Snippet/: DelaySnippetFragment.cpp  DelaySnippetFragment.h  KeySnippetFragment.cpp  KeySnippetFragment.h  ShortcutSnippetFragment.cpp  ShortcutSnippetFragment.h  SnippetFragment.cpp  SnippetFragment.h  TextSnippetFragment.cpp  TextSnippetFragment.h
Beeftext/Translations/: beeftext_de.ts  beeftext_de_DE.ts  beeftext_es.ts  beeftext_es_ES.ts  beeftext_fr.ts  beeftext_fr_FR.ts  beeftext_hu_HU.ts  beeftext_it.ts  beeftext_it_IT.ts  beeftext_nl.ts  beeftext_nl_NL.ts  beeftext_pl.ts  beeftext_pl_PL.ts  beeftext_pt.ts  beeftext_pt_PT.ts  beeftext_ru.ts  beeftext_ru_RU.ts  beeftext_zh.ts  beeftext_zh_CN.ts  beeftext_zh_TW.ts  qtbase_nl.ts
Beeftext/Update/: UpdateCheckWorker.cpp  UpdateCheckWorker.h  UpdateDialog.cpp  UpdateDialog.h  UpdateDialog.ui  UpdateManager.cpp  UpdateManager.h
Combo/: Combo.cpp  Combo.h  ComboDialog.cpp  ComboDialog.h  ComboDialog.ui  (+34 more)
(+48 files in other folders)
